tests/ui/typeck/struct-pattern-mismatch-37026.stderr
error[E0308]: mismatched types
  --> $DIR/struct-pattern-mismatch-37026.rs:6:9
   |
LL |     let empty_struct::XEmpty1 = ();
   |         ^^^^^^^^^^^^^^^^^^^^^   -- this expression has type `()`
   |         |
   |         expected `()`, found `XEmpty1`

error[E0308]: mismatched types
  --> $DIR/struct-pattern-mismatch-37026.rs:7:9
   |
LL |     let empty_struct::XEmpty2(..) = ();
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^   -- this expression has type `()`
   |         |
   |         expected `()`, found `XEmpty2`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0308`.
